force-app/main/default/objects/Account/fields/Annual_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Turnover__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Udpated by GIAS</inlineHelpText>
    <label>Annual Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>