force-app/main/default/objects/Account/fields/CC_Address_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Post_Code__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>Updated by Charity Commission</inlineHelpText>
    <label>CC Address Post Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>