force-app/main/default/objects/Account/fields/CC_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Street__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>Updated by Charity Commission</inlineHelpText>
    <label>CC Address Street</label>
    <length>125</length>
    <type>Text</type>
</CustomField>