force-app/main/default/objects/Account/fields/CC_Charitable_Object__c.field-meta.xml
<CustomField>
    <fullName>CC_Charitable_Object__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>Updated by Charity Commission</inlineHelpText>
    <label>CC Charitable Object</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>