force-app/main/default/objects/Account/fields/CC_Charity_Reg_Co_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Charity_Reg_Co_Number__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>CC Charity Reg Co. Number</label>
    <length>125</length>
    <type>Text</type>
</CustomField>