force-app/main/default/objects/Account/fields/CC_Charity_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Charity_Type__c</fullName>
    <description>US TP - Updated by Charity Commission</description>
    <inlineHelpText>Updated by Charity Commission</inlineHelpText>
    <label>CC Charity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>