force-app/main/default/objects/Account/fields/CC_Date_of_Removal__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Removal__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>CC Date of Removal</label>
    <type>Date</type>
</CustomField>