force-app/main/default/objects/Account/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>updated by Charity Commission</inlineHelpText>
    <label>CC Email</label>
    <type>Email</type>
</CustomField>