force-app/main/default/objects/Account/fields/CC_Full_Charity_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Full_Charity_Name__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>CC Full Charity Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>