force-app/main/default/objects/Account/fields/CC_Income__c.field-meta.xml
<CustomField>
    <fullName>CC_Income__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>CC Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>