force-app/main/default/objects/Account/fields/CC_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Modified_Date__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>updated by Charity Commission</inlineHelpText>
    <label>CC Last Modified Date</label>
    <type>DateTime</type>
</CustomField>