force-app/main/default/objects/Account/fields/CC_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Names__c</fullName>
    <description>US TP - Other Names used by Charity Commission</description>
    <label>CC Other Names</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>