force-app/main/default/objects/Account/fields/CC_Phone__c.field-meta.xml
<CustomField>
    <fullName>CC_Phone__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>updated by Charity Commission</inlineHelpText>
    <label>CC Phone</label>
    <type>Phone</type>
</CustomField>