force-app/main/default/objects/Account/fields/CC_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Registration_Status__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>CC Registration Status</label>
    <length>125</length>
    <type>Text</type>
</CustomField>