force-app/main/default/objects/Account/fields/CC_Reporting_Period_Year_End__c.field-meta.xml
<CustomField>
    <fullName>CC_Reporting_Period_Year_End__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>Updated by Charity Commission</inlineHelpText>
    <label>CC Reporting Period Year End</label>
    <type>Date</type>
</CustomField>