force-app/main/default/objects/Account/fields/CC_Trustees__c.field-meta.xml
<CustomField>
    <fullName>CC_Trustees__c</fullName>
    <description>US TP - Field to hold Trustee information from Charity Commission</description>
    <label>CC Trustees</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>