force-app/main/default/objects/Account/fields/CC_Website__c.field-meta.xml
<CustomField>
    <fullName>CC_Website__c</fullName>
    <description>US TP - updated by Charity Commission</description>
    <inlineHelpText>updated by Charity Commission</inlineHelpText>
    <label>CC Website</label>
    <type>Url</type>
</CustomField>