force-app/main/default/objects/Account/fields/Charitable_Object__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Object__c</fullName>
    <description>US TP</description>
    <label>Charitable Object</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>