force-app/main/default/objects/Account/fields/Charity_Reg_Co_Number__c.field-meta.xml
<CustomField>
    <fullName>Charity_Reg_Co_Number__c</fullName>
    <description>US TP</description>
    <label>Charity Reg Co. Number</label>
    <length>125</length>
    <type>Text</type>
</CustomField>