force-app/main/default/objects/Account/fields/Charity_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Charity_Suffix__c</fullName>
    <description>US TP</description>
    <label>Charity Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>