force-app/main/default/objects/Account/fields/Charity_Type__c.field-meta.xml
<CustomField>
    <fullName>Charity_Type__c</fullName>
    <description>US TP</description>
    <label>Charity Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>