force-app/main/default/objects/Account/fields/Classification_What__c.field-meta.xml
<CustomField>
    <fullName>Classification_What__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>Classification What</label>
    <length>125</length>
    <type>Text</type>
</CustomField>