force-app/main/default/objects/Account/fields/Classification_Who__c.field-meta.xml
<CustomField>
    <fullName>Classification_Who__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>Classification Who</label>
    <length>125</length>
    <type>Text</type>
</CustomField>