force-app/main/default/objects/Account/fields/Client_CRM__c.field-meta.xml
<CustomField>
    <fullName>Client_CRM__c</fullName>
    <description>CR-US</description>
    <label>Client CRM</label>
    <length>125</length>
    <type>Text</type>
</CustomField>