force-app/main/default/objects/Account/fields/Client_Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>Client_Lead_Partner__c</fullName>
    <description>CR-US</description>
    <label>Client Lead Partner</label>
    <length>125</length>
    <type>Text</type>
</CustomField>