force-app/main/default/objects/Account/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <description>CR-US
(from Mattersphere)</description>
    <label>Client Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>