force-app/main/default/objects/Account/fields/Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Registration__c</fullName>
    <description>US TP</description>
    <label>Date of Registration</label>
    <type>Date</type>
</CustomField>