force-app/main/default/objects/Account/fields/Date_of_Removal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Removal__c</fullName>
    <description>US TP</description>
    <label>Date of Removal</label>
    <type>Date</type>
</CustomField>