force-app/main/default/objects/Account/fields/Default_Contact__c.field-meta.xml
<CustomField>
    <fullName>Default_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CR-US</description>
    <label>Default Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>AccountsDefaultContact</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>