force-app/main/default/objects/Account/fields/Engagement_Check__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Check__c</fullName>
    <formula>IF( (Follow_Up_Engagement_Date__c - Today()) &lt; 0 , FALSE,
IF( Engagement_Tracking__c = FALSE , TRUE,
IF( ISPICKVAL(Engagement_Frequency__c, &quot;Weekly&quot;) &amp;&amp; (Today()- Last_Engagement_Date__c ) &lt; 7 , TRUE,
IF( ISPICKVAL(Engagement_Frequency__c, &quot;Monthly&quot;) &amp;&amp; (Today()-Last_Engagement_Date__c) &lt; 30 , TRUE,
IF( ISPICKVAL(Engagement_Frequency__c, &quot;Quarterly&quot;) &amp;&amp; (Today()-Last_Engagement_Date__c) &lt; 91 , TRUE,
IF( ISPICKVAL(Engagement_Frequency__c, &quot;Biannual&quot;) &amp;&amp; (Today()-Last_Engagement_Date__c) &lt; 182 , TRUE,
IF( ISPICKVAL(Engagement_Frequency__c, &quot;Annual&quot;) &amp;&amp; (Today()-Last_Engagement_Date__c) &lt; 365 , TRUE,FALSE
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Check</label>
    <type>Checkbox</type>
</CustomField>