force-app/main/default/objects/Account/fields/Engagement_indicator__c.field-meta.xml
<CustomField>
    <fullName>Engagement_indicator__c</fullName>
    <formula>IF(Engagement_Check__c, &quot;✅&quot;, &quot;❗️❌❗️&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Indicator</label>
    <type>Text</type>
</CustomField>