force-app/main/default/objects/Account/fields/Engagement_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Engagement Tracking</label>
    <type>Checkbox</type>
</CustomField>