force-app/main/default/objects/Account/fields/Follow_Up_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Engagement_Date__c</fullName>
    <inlineHelpText>If there is a specific date that future engagement needs to occur by.</inlineHelpText>
    <label>Follow Up Engagement Date</label>
    <type>Date</type>
</CustomField>