force-app/main/default/objects/Account/fields/GIAS_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>GIAS_Reference_Number__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by GIAS.</inlineHelpText>
    <label>GIAS Reference Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>