force-app/main/default/objects/Account/fields/How_do_they_do_it__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_do_it__c</fullName>
    <label>How do they do it</label>
    <length>500</length>
    <type>Html</type>
</CustomField>