force-app/main/default/objects/Account/fields/How_Shortcodes_CC__c.field-meta.xml
<CustomField>
    <fullName>How_Shortcodes_CC__c</fullName>
    <label>How Shortcodes CC</label>
    <length>250</length>
    <type>Text</type>
</CustomField>