force-app/main/default/objects/Account/fields/Intemediary__c.field-meta.xml
<CustomField>
    <fullName>Intemediary__c</fullName>
    <description>CR-US</description>
    <label>Intemediary?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>