force-app/main/default/objects/Account/fields/Last_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Date__c</fullName>
    <inlineHelpText>An event that would result in a satisfactory measure of engagement. Can be a call, email or meeting.</inlineHelpText>
    <label>Last Engagement Date</label>
    <type>Date</type>
</CustomField>