force-app/main/default/objects/Account/fields/Last_Engagement_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Note__c</fullName>
    <label>Last Engagement Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>