force-app/main/default/objects/Account/fields/Mattersphere_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Mattersphere_Created_by__c</fullName>
    <description>CR-US</description>
    <label>Mattersphere Created by</label>
    <length>125</length>
    <type>Text</type>
</CustomField>