force-app/main/default/objects/Account/fields/Mattersphere_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Mattersphere_Created_Date__c</fullName>
    <description>CR-US</description>
    <label>Mattersphere Created Date</label>
    <type>DateTime</type>
</CustomField>