force-app/main/default/objects/Account/fields/Mattersphere_Id__c.field-meta.xml
<CustomField>
    <fullName>Mattersphere_Id__c</fullName>
    <description>US TP</description>
    <externalId>true</externalId>
    <label>Mattersphere Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>