force-app/main/default/objects/Account/fields/Mattersphere_Number__c.field-meta.xml
<CustomField>
    <fullName>Mattersphere_Number__c</fullName>
    <description>CR-US</description>
    <label>Mattersphere Number</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>