force-app/main/default/objects/Account/fields/Mattersphere_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Mattersphere_Updated_By__c</fullName>
    <description>CR-US</description>
    <label>Mattersphere Updated By</label>
    <length>125</length>
    <type>Text</type>
</CustomField>