force-app/main/default/objects/Account/fields/NO_UI_Batch_Updated__c.field-meta.xml
<CustomField>
    <fullName>NO_UI_Batch_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US TP - Used within the Charity Commission to indicate that a Charity Account has been updated recently.</description>
    <label>NO UI Batch Updated</label>
    <type>Checkbox</type>
</CustomField>