force-app/main/default/objects/Account/fields/Open_Matter__c.field-meta.xml
<CustomField>
    <fullName>Open_Matter__c</fullName>
    <description>CR-US</description>
    <label>Open Matter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>