force-app/main/default/objects/Account/fields/Organisation_Number__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Number__c</fullName>
    <description>CR-US</description>
    <inlineHelpText>Updated by Charities Commission.</inlineHelpText>
    <label>Organisation Number</label>
    <length>125</length>
    <type>Text</type>
</CustomField>