force-app/main/default/objects/Account/fields/Other_Names__c.field-meta.xml
<CustomField>
    <fullName>Other_Names__c</fullName>
    <description>US TP</description>
    <label>Other Names</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>