force-app/main/default/objects/Account/fields/Reporting_Period_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Year_End__c</fullName>
    <description>US TP</description>
    <label>Reporting Period Year End</label>
    <type>Date</type>
</CustomField>