force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>CR-US</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
                <isActive>false</isActive>
                <label>Dormant</label>
            </value>
            <value>
                <fullName>Existing</fullName>
                <isActive>false</isActive>
                <label>Existing</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <isActive>false</isActive>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Trust Member / School</fullName>
                <isActive>false</isActive>
                <label>Trust Member / School</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>