force-app/main/default/objects/Account/fields/Trustees__c.field-meta.xml
<CustomField>
    <fullName>Trustees__c</fullName>
    <description>US TP</description>
    <label>Trustees</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>