force-app/main/default/objects/Account/recordTypes/Charities.recordType-meta.xml
<RecordType>
    <fullName>Charities</fullName>
    <active>true</active>
    <description>Charities Commission</description>
    <label>Charities</label>
</RecordType>