force-app/main/default/objects/Account/recordTypes/Companies.recordType-meta.xml
<RecordType>
    <fullName>Companies</fullName>
    <active>true</active>
    <description>Companies House</description>
    <label>Companies</label>
</RecordType>