force-app/main/default/objects/Account/recordTypes/Educational_Establishments.recordType-meta.xml
<RecordType>
    <fullName>Educational_Establishments</fullName>
    <active>true</active>
    <description>GIAS</description>
    <label>Educational Establishments</label>
</RecordType>